--- a/02_survival_prediction_classification/project_02_titanic_classification.ipynb
+++ b/02_survival_prediction_classification/project_02_titanic_classification.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n__author__ = \"One solo developer\"\\n__authors__ = [\"One developer\", \"And another one\", \"etc\"]\\n__contact__ = \"mail@example.com\"\\n__copyright__ = \"Copyright $YEAR, $COMPANY_NAME\"\\n__credits__ = [\"One developer\", \"And another one\", \"etc\"]\\n__date__ = \"YYYY/MM/DD\"\\n__deprecated__ = False\\n__email__ =  \"mail@example.com\"\\n__license__ = \"GPLv3\"\\n__maintainer__ = \"developer\"\\n__status__ = \"Production\"\\n__version__ = \"0.0.1\"\\n\\n\\n\\n\\nimport zen\\n\\nPEP8\\npylint\\n\\nruntime\\nmemory\\nauthor\\ncreated on: Fri Mar 04 2022 \\nerror exception handling\\n\\nscaler.set_output(transform=\"Pandas\")\\n'"
+       "' \\nPEP8\\npylint\\n\\nruntime\\nmemory\\nauthor\\ncreated on: Fri Mar 04 2022 \\nerror exception handling\\n\\nscaler.set_output(transform=\"Pandas\")\\n\\n\\n\\n#get titles with split (use function)\\n#we could add SibSp and Parch to get the family size\\n#group ticket feature and look if some people are on one ticket\\n#can we devide Fare through family size to get the real prize per person?\\n#checkout Voting Classifier!!!\\n#checkout ExtraTreesClassifier!!!\\n\\n'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 254.09 MiB, increment: 0.37 MiB\n",
-      "CPU times: user 86.1 ms, sys: 35 ms, total: 121 ms\n",
-      "Wall time: 284 ms\n"
+      "peak memory: 240.24 MiB, increment: 0.37 MiB\n",
+      "CPU times: user 96.8 ms, sys: 48.5 ms, total: 145 ms\n",
+      "Wall time: 303 ms\n"
      ]
     },
     {
@@ -302,14 +302,14 @@
        "2                1      0   PC 17599  71.2833   C85        C  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%time %memit\n",
-    "PATH = '/home/florianriemann/data_science_portfolio/data/titanic/'\n",
+    "PATH = '/home/florianriemann/data_science_portfolio/boot_camp/data/titanic/'\n",
     "\n",
     "df_titanic, df_titanic.name = pd.read_csv(PATH + 'train.csv'), 'df_titanic'\n",
     "df_titanic.set_index(['PassengerId'], inplace=True)\n",
@@ -58814,16 +58814,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/florianriemann/data_science_portfolio/data/titanic/'"
+       "'/home/florianriemann/data_science_portfolio/boot_camp/data/titanic/'"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
